// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RulesView/> should render the rule library view 1`] = `
<div
  class="full-width overflow-auto"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Rules
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
              type="button"
            >
              <span>
                All rule types
              </span>
            </button>
            <div
              aria-hidden="true"
              class="dropdown dropdown-menu dropdown-menu-right"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-item-input dropdownItemInput dropdown-header"
                tabindex="-1"
              >
                <input
                  class="form-control"
                  placeholder="Search rule types..."
                  type="text"
                  value=""
                />
              </h6>
              <button
                class="component dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <div
                  class="checkbox"
                >
                  <label
                    class="label label quickSelectionOption"
                    for="checkbox-1"
                  >
                    <input
                      class="input"
                      id="checkbox-1"
                      name="checkbox-1"
                      type="checkbox"
                    />
                    Select all
                    <div
                      class="badge"
                    >
                      2
                    </div>
                  </label>
                </div>
              </button>
              <div
                class="dropdownDivider dropdown-divider"
                tabindex="-1"
              />
              <div
                class="content"
              >
                <div
                  class="wrapperItem"
                >
                  <label
                    class="label label labelItem"
                    for="checkbox-2"
                  >
                    <input
                      class="input"
                      id="checkbox-2"
                      name="checkbox-2"
                      type="checkbox"
                    />
                     Auto Close
                  </label>
                </div>
                <div
                  class="wrapperItem"
                >
                  <label
                    class="label label labelItem"
                    for="checkbox-3"
                  >
                    <input
                      class="input"
                      id="checkbox-3"
                      name="checkbox-3"
                      type="checkbox"
                    />
                     Auto Tag
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                id="input-text-4"
                name="input-text-4"
                placeholder="Search rule library..."
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            to="/app/settings/rules/new"
          >
            <button
              class="wrapper float-right fill primary medium"
              type="button"
            >
              Create rule
            </button>
          </a>
        </div>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <ul
        class="item nav"
      >
        My rules
      </ul>
      <ul
        class="item active nav"
      >
        Rule library
      </ul>
    </nav>
  </div>
  <div
    class="description pageContainer container-fluid"
  >
    <div
      class="header"
      data-candu-id="rules-list-description"
    >
      <div
        class="libraryHeader"
      >
        <h1>
          Rule Library
        </h1>
        <p>
          Below are some rule examples that you can install in your account. Once installed you can visit your rule setting page to adapt it to your need.
           
          <a
            href="https://docs.gorgias.com/rules/rule-library-new"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="inner"
      style="min-height: 500px;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`<RulesView/> should render the rule views 1`] = `
<div
  class="full-width overflow-auto"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Rules
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <a
            to="/app/settings/rules/new"
          >
            <button
              class="wrapper float-right fill primary medium"
              type="button"
            >
              Create rule
            </button>
          </a>
        </div>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <ul
        class="item active nav"
      >
        My rules
      </ul>
      <ul
        class="item nav"
      >
        Rule library
      </ul>
    </nav>
  </div>
  <div
    class="description pageContainer container-fluid"
  >
    <div
      class="header"
      data-candu-id="rules-list-description"
    >
      <p>
        Rules provide a way to automatically perform actions on tickets, like tagging, assigning or even responding. Hover a row to show the rule description. Learn more about how to setup rules
         
        <a
          href="https://docs.gorgias.com/rules"
          rel="noopener noreferrer"
          target="_blank"
        >
          in our docs
        </a>
        .
      </p>
      <p>
        Rules are executed depending on triggering events and in the order they are listed on this page.
         
        <a
          href="https://docs.gorgias.com/rules/rules-faq"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about rules execution
        </a>
        .
      </p>
      <p>
        If you need inspiration to automate your workflows don't hesitate to visit our
         
        <a
          href="#"
        >
          rule library
        </a>
        !
      </p>
    </div>
    <div>
      <div
        class="preview"
      >
        <div
          class="screenshot"
        >
          <img
            alt="video preview"
            src="https://img.youtube.com/vi/zo2Ui0RPscU/0.jpg"
          />
          <i
            class="material-icons playIcon"
          >
            play_circle_filled_white
          </i>
          <div
            class="iconBackground"
          />
        </div>
        <div
          class="title"
        >
          Working with rules
        </div>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="inner"
      style="min-height: 500px;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;
